Split task to multi small tasks

--- a/roles/ocp_installer/tasks/main.yml
+++ b/roles/ocp_installer/tasks/main.yml
@@ -1,111 +1,5 @@
 ---
-# tasks file for ocp_installer
-- name: disable firewalld
-  service:
-    name: firewalld
-    state: stopped
-    enabled: false
-
-- name: disable selinux
-  selinux:
-    policy: targeted
-    state: permissive 
-
-#- name: configure the dns name server
-#  net_system:
-#    name_servers:
-#    - "{{ nodes.bastion.ip }}"
-
-- name: install dns
-  yum:
-    name: dnsmasq
-    state: latest
-
-- name: modify dns configuration
-  template:
-    src: dns.j2
-    dest: /etc/dnsmasq.d/dns.conf 
-  notify:
-  - restart dns
-
-- name: install haproxy
-  yum:
-    name: haproxy
-    state: latest
-
-- name: modify haproxy configuration
-  template:
-    src: haproxy.j2
-    dest: /etc/haproxy/haproxy.cfg
-  notify:
-  - restart haproxy
-
-- name: install httpd
-  yum:
-    name: httpd
-    state: latest
-
-- name: modify httpd configuration
-  lineinfile:
-    path: /etc/httpd/conf/httpd.conf
-    regexp: "^Listen"
-    line: "Listen 8080"
-  notify:
-  - restart httpd
-
-- name: extract ocp install cli
-  unarchive:
-    src: "{{ env.ocpInstallDir }}"
-    dest: /usr/local/bin/
-
-- name: extract ocp client cli
-  unarchive:
-    src: "{{ env.ocpClientDir }}"
-    dest: /usr/local/bin/
-
-- name: remove old install dir
-  file:
-    path: /root/ocp4
-    state: absent
-
-- name: create install dir
-  file:
-    path: /root/ocp4
-    state: directory
-    mode: 0755
-
-- name: create install config
-  template:
-    src: install-config.j2
-    dest: /root/ocp4/install-config.yaml
-
-- name: generate manifests
-  command: openshift-install create manifests --dir=/root/ocp4
-
-- name: modify scheduler config
-  lineinfile:
-    path: /root/ocp4/manifests/cluster-scheduler-02-config.yml
-    regexp: "^[\\s]*mastersSchedulable"
-    line: "  mastersSchedulable: false"
-
-- name: generate ignition files
-  command: openshift-install create ignition-configs --dir=/root/ocp4
-
-- name: copy the ignition files
-  copy:
-    src: "{{ item }}"
-    dest: /var/www/html
-  with_fileglob:
-  - "/root/ocp4/*.ign"
-
-- name: copy the raw.gz
-  copy:
-    src: "{{ env.rawfileDir }}"
-    dest: /var/www/html/rhcos.raw.gz
-
-- name: granted read permission for httpd files 
-  file:
-    path: /var/www/html
-    state: directory
-    recurse: yes
-    mode: 0644
+- include_tasks: prepare.yml
+- include_tasks: dns.yml
+- include_tasks: haproxy.yml
+- include_tasks: ocp.yml
