Revert description chanages

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,31 +1,31 @@
 ---
 # - name: "install kvm"
 
-- name: "disable firewalld"
+- name: Disable firewalld
   include_tasks: firewalld.yml
   when: firewalld_disable 
 
-- name: "disable selinux"
+- name: Disable selinux
   include_tasks: selinux.yml
   when: selinux_disable 
 
-- name: "setup haproxy"
+- name: Setup loadbalancer
   include_tasks: haproxy.yml
   when: haproxy_configure 
 
 # - name: "check lb settings"
 
-- name: "setup dns"
+- name: Setup DNS
   include_tasks: dns.yml
   when: dns_configure 
 
 # - name: "check dns settings"
 
-- name: "setup mirror registry"
+- name: Setup mirror registry
   include_tasks: mirror-registry.yml
   when: registry_configure 
 
 # - name: "import ocp images to mirror registry"
 
-- name: "setup ocp files"
+- name: Setup OCP files
   include_tasks: ocp.yml
