--- a/tasks/dns.yml
+++ b/tasks/dns.yml
@@ -1,10 +1,10 @@
 ---
-- name: "install dns"
+- name: Install DNS
   ansible.builtin.yum:
     name: dnsmasq
     state: latest
 
-- name: "modify dns configuration"
+- name: Modify DNS configuration
   ansible.builtin.template:
     src: dns.j2
     dest: /etc/dnsmasq.d/dns.conf
