--- a/tasks/haproxy.yml
+++ b/tasks/haproxy.yml
@@ -1,10 +1,10 @@
 ---
-- name: "install haproxy"
+- name: Install haproxy
   ansible.builtin.yum:
     name: haproxy
     state: latest
 
-- name: "modify haproxy configuration"
+- name: Modify haproxy configuration
   ansible.builtin.template:
     src: haproxy.j2
     dest: /etc/haproxy/haproxy.cfg
