--- a/tasks/mirror-registry.yml
+++ b/tasks/mirror-registry.yml
@@ -1,19 +1,19 @@
 ---
-- name: "install podman"
+- name: Install podman
   ansible.builtin.yum:
     name: podman
     state: present
 
-- name: "unarchive mirror registry"
+- name: Unarchive mirror registry
   ansible.builtin.unarchive:
     src: "{{ mirrorRegistryDir }}"
     dest: "."
     mode: "u+x"
 
-- name: "install mirror registry"
+- name: Install mirror registry
   ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }} --quayRoot ~/images"
   register: registryResult
 
-- name: "print result"
+- name: Print result
   ansible.builtin.debug: 
     var: registryResult
