Add meta module for execute handler immediately

--- a/tasks/dns.yml
+++ b/tasks/dns.yml
@@ -11,4 +11,7 @@
   notify:
   - restart dns
 
+- name: Force DNS service restart for DNS check tasks
+  ansible.builtin.meta: flush_handlers
+
 # - name: Update nic dns setting
