--- a/tasks/mirror-registry.yml
+++ b/tasks/mirror-registry.yml
@@ -15,7 +15,7 @@
 - name: Print message
   ansible.builtin.debug:
     msg: "Mirror Registry already installed or port is already used by other service"
-  when: result.failed
+  when: not result.failed
 
 - name: Unarchive mirror registry
   ansible.builtin.unarchive:
@@ -25,11 +25,6 @@
   when: result.failed
 
 - name: Install mirror registry
-  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }} --quayRoot ~/images"
+  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }} --quayRoot ~/mirror --initPassword redhat"
   register: registryResult
-  when: result.failed
-
-- name: Print result
-  ansible.builtin.debug: 
-    var: registryResult
   when: result.failed
