Add dns ip parameter for dns check

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ selinux_disable: true
 dns_configure: true
 dns_upstream: 168.95.1.1
 dns_check: true
+dns_ip: 127.0.0.1
 
 # LB
 haproxy_configure: true
