--- a/tasks/dnscheck.yml
+++ b/tasks/dnscheck.yml
@@ -1,22 +1,22 @@
 - name: Check bastion record
   ansible.builtin.debug:
-    msg: "{{ lookup('community.general.dig', '{{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}')}}"
+    msg: "{{ lookup('community.general.dig', '{{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}', '@{{ dns_ip }}') }}"
   register: bastion_records
 
 - name: Check bootstrap record
   ansible.builtin.debug:
-    msg: "{{ lookup('community.general.dig', '{{ bootstrap.name }}.{{ clusterName }}.{{ baseDomain }}')}}"
+    msg: "{{ lookup('community.general.dig', '{{ bootstrap.name }}.{{ clusterName }}.{{ baseDomain }}', '@{{ dns_ip }}') }}"
   register: bootstrap_records
 
 - name: Check master record
   ansible.builtin.debug:
-    msg: "{{ lookup('community.general.dig', '{{ item.name }}.{{ clusterName }}.{{ baseDomain }}')}}"
+    msg: "{{ lookup('community.general.dig', '{{ item.name }}.{{ clusterName }}.{{ baseDomain }}', '@{{ dns_ip }}') }}"
   loop: "{{ master }}"
   register: master_records
 
 - name: Check worker record
   ansible.builtin.debug:
-    msg: "{{ lookup('community.general.dig', '{{ item.name }}.{{ clusterName }}.{{ baseDomain }}')}}"
+    msg: "{{ lookup('community.general.dig', '{{ item.name }}.{{ clusterName }}.{{ baseDomain }}', '@{{ dns_ip }}') }}"
   loop: "{{ worker }}"
   register: worker_records
 
