--- a/tasks/dns.yml
+++ b/tasks/dns.yml
@@ -4,12 +4,27 @@
     name: dnsmasq
     state: latest
 
+- name: Modify httpd configuration
+  ansible.builtin.lineinfile:
+    path: /etc/dnsmasq.conf
+    regexp: "^interface="
+    line: "interface={{ interface }}"
+  notify:
+  - restart dns
+
 - name: Modify DNS configuration
   ansible.builtin.template:
     src: dns.j2
     dest: /etc/dnsmasq.d/dns.conf
   notify:
   - restart dns
+
+- name: Manage DNS in NetworkManager
+  ansible.builtin.command: "nmcli connection modify ens33 ipv4.dns {{ bastion.ip }}"
+  notify:
+  - restart NetworkManager
+    #- name: update 
+    #  ansible.builtin.command: "service NetworkManager restart"
 
 - name: Force DNS service restart for DNS check tasks
   ansible.builtin.meta: flush_handlers
