--- a/tasks/mirror-registry.yml
+++ b/tasks/mirror-registry.yml
@@ -6,7 +6,7 @@
 
 - name: Check mirror registry installed or not
   ansible.builtin.wait_for:
-    host: 127.0.0.1
+    host: "{{ bastion.ip }}"
     port: 8443
     timeout: 10
   register: result
@@ -25,6 +25,14 @@
   when: result.failed
 
 - name: Install mirror registry
-  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }} --quayRoot ~/mirror --initPassword {{ registryPassword }}"
+  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }} --quayRoot {{ quayRoot }} --quayStorage {{ quayStorage }} --initPassword {{ registryPassword }}"
   register: registryResult
+  when: result.failed
+
+- name: Trust mirror registry CA
+  ansible.builtin.command: 
+    cmd: "{{ item }}"
+  loop:
+  -  cp {{ quayRoot }}/quay-rootCA/rootCA.pem /etc/pki/ca-trust/source/anchors/
+  - update-ca-trust
   when: result.failed
