Fix httpd won't start problem

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+# enable or disable
 online: true
 firewalld_disable: true
 selinux_disable: true
@@ -7,6 +8,8 @@ selinux_disable: true
 dns_configure: true
 interface: ens33
 dns_upstream: 8.8.8.8
+
+# DNS check
 dns_check: true
 dns_ip: 172.20.11.50
 
@@ -16,18 +19,21 @@ haproxy_configure: true
 # Registry
 registry_configure: false
 mirrorRegistryDir: /root/install_source/mirror-registry.tar.gz
- # for online install
 quayRoot: /mirror-registry
 quayStorage: /mirror-registry/storage
 registryPassword: P@ssw0rd
 
 # OCP
+# define the cluster name for cluster
 clusterName: ocp4
+# define the base domain for cluster
 baseDomain: demo.lab
-pullSecretDir: /root/install_source/pull-secret.txt
-sshKeyDir: /root/.ssh/id_rsa.pub 
+# define the resource files absolute path
+sshKeyDir: /root/.ssh/id_rsa.pub
 ocpInstallDir: /root/install_source/openshift-install-rhel9-amd64.tar.gz
 ocpClientDir: /root/install_source/openshift-client-linux-amd64-rhel9-4.16.26.tar.gz
+# for online install
+pullSecretDir: /root/install_source/pull-secret.txt
 
 # Mirroring from disk to mirror
 mirror: false
@@ -36,12 +42,14 @@ imageSetFile: /root/install_source
 reponame: ocp416
 
 # Nodes
+
+# Nodes
 bastion:
   name: bastion
   ip: 172.20.11.50
 bootstrap:
   name: bootstrap
-  ip: 172.20.11.59
+  ip: 172.20.11.60
 master:
 - name: master01
   ip: 172.20.11.51
@@ -49,10 +57,17 @@ master:
   ip: 172.20.11.52
 - name: master03
   ip: 172.20.11.53
+master:
+- name: infra01
+  ip: 172.20.11.54
+- name: infra02
+  ip: 172.20.11.55
+- name: infra03
+  ip: 172.20.11.56
 worker: 
 - name: worker01
-  ip: 172.20.11.54
+  ip: 172.20.11.57
 - name: worker02
-  ip: 172.20.11.55
+  ip: 172.20.11.58
 - name: worker03
-  ip: 172.20.11.56
+  ip: 172.20.11.59
