--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,8 +42,6 @@ imageSetFile: /root/install_source
 reponame: ocp416
 
 # Nodes
-
-# Nodes
 bastion:
   name: bastion
   ip: 172.20.11.50
@@ -57,7 +55,7 @@ master:
   ip: 172.20.11.52
 - name: master03
   ip: 172.20.11.53
-master:
+infra:
 - name: infra01
   ip: 172.20.11.54
 - name: infra02
