--- a/tasks/dns.yml
+++ b/tasks/dns.yml
@@ -4,7 +4,7 @@
     name: dnsmasq
     state: latest
 
-- name: Modify httpd configuration
+- name: Modify DNS configuration
   ansible.builtin.lineinfile:
     path: /etc/dnsmasq.conf
     regexp: "^interface="
@@ -18,6 +18,12 @@
     dest: /etc/dnsmasq.d/dns.conf
   notify:
   - restart dns
+
+- name: Start DNS
+  ansible.builtin.service:
+    name: dnsmasq
+    state: started
+    enabled: true
 
 - name: Manage DNS in NetworkManager
   ansible.builtin.command: "nmcli connection modify ens33 ipv4.dns {{ bastion.ip }}"
