--- a/tasks/mirror-registry.yml
+++ b/tasks/mirror-registry.yml
@@ -25,7 +25,7 @@
   when: result.failed
 
 - name: Install mirror registry
-  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }} --quayRoot {{ quayRoot }} --quayStorage {{ quayStorage }} --initPassword {{ registryPassword }}"
+  ansible.builtin.command: "./mirror-registry install --quayHostname {{ bastion.name }}.{{ clusterName }}.{{ baseDomain }}:8443 --quayRoot {{ quayRoot }} --quayStorage {{ quayStorage }} --initPassword {{ registryPassword }}"
   register: registryResult
   when: result.failed
 
