Update unarchive module

--- a/tasks/mirror-registry.yml
+++ b/tasks/mirror-registry.yml
@@ -19,6 +19,7 @@
 
 - name: Unarchive mirror registry
   ansible.builtin.unarchive:
+    remote_src: true
     src: "{{ mirrorRegistryDir }}"
     dest: "."
     mode: "u+x"
