--- a/tasks/ocp.yml
+++ b/tasks/ocp.yml
@@ -124,15 +124,27 @@
   with_fileglob:
   - "/root/ocp4/*.ign"
 
-- name: core install script
-  ansible.builtin.lineinfile:
-    path: /var/www/html/{{ item }}.sh
-    line: coreos-installer install /dev/sda -I http://{{ bastion.ip}}:8080/{{item}}.ign --insecure-ignition -n
-    create: true
-  loop:
-  - bootstrap
-  - master
-  - worker
+  - name: Create install.sh script
+    copy:
+      dest: /var/www/html/install.sh
+      mode: '0755'
+      content: |
+        #!/bin/bash
+
+        # curl http://['bastion ip']:8080/install.sh | bash -s - /dev/sda worker
+
+        DEVICE="$1"
+        ROLE="$2"
+
+        if [ -z "$DEVICE" ] || [ -z "$ROLE" ]; then
+          echo "Usage: $0 <device> <role>"
+          exit 1
+        fi
+
+        echo "Installing CoreOS to $DEVICE using role $ROLE..."
+        coreos-installer install "$DEVICE" \
+          -I http://{{ bastion.ip }}:8080/${ROLE}.ign \
+          --insecure-ignition -n
 
 - name: Granted read permission for httpd files
   ansible.builtin.file:
