--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,7 +27,13 @@ quayRoot: /mirror-registry
 quayStorage: /mirror-registry/storage
 registryPassword: P@ssw0rd
 
+# NTP server
+ntp_server_configure: true
+# NTP client
+ntp_server_ip: 172.20.11.50
+
 # OCP
+ocp_configure: true
 # define the cluster name for cluster
 clusterName: ocp4
 # define the base domain for cluster
