--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -22,3 +22,9 @@
     name: httpd
     state: restarted
     enabled: true
+
+- name: restart chronyd
+  ansible.builtin.service:
+    name: chronyd
+    state: restarted
+    enabled: true
