--- a/tasks/ocp.yml
+++ b/tasks/ocp.yml
@@ -1,67 +1,4 @@
 ---
-- name: Install httpd
-  ansible.builtin.yum:
-    name: httpd
-    state: latest
-
-- name: Install net-tools
-  ansible.builtin.yum:
-    name: net-tools
-    state: latest
-
-- name: Modify httpd configuration
-  ansible.builtin.lineinfile:
-    path: /etc/httpd/conf/httpd.conf
-    regexp: "^Listen"
-    line: "Listen 8080"
-  notify:
-  - restart httpd
-
-- name: Force httpd service restart for httpd check tasks
-  ansible.builtin.meta: flush_handlers
-
-- name: Check ocp install cli exists
-  ansible.builtin.stat:
-    path: /usr/bin/openshift-install
-  register: install_cli
-
-- name: Extract ocp install cli
-  ansible.builtin.unarchive:
-    remote_src: true
-    src: "{{ ocpInstallDir }}"
-    dest: /usr/bin/
-    list_files: true
-  register: unarchive_install_cli
-  when: install_cli.stat.exists == False
-
-- name: Move unarchive_install_cli file to openshift-install
-  when: install_cli.stat.exists == False and unarchive_install_cli.files != 'openshift-install'
-  block:
-    - name: Copy file to openshift-install
-      ansible.builtin.copy:
-        remote_src: true
-        src: /usr/bin/{{ unarchive_install_cli.files[0]}}
-        dest: /usr/bin/openshift-install
-        mode: preserve
-    - name: Remove file
-      ansible.builtin.file:
-        path: /usr/bin/{{ unarchive_install_cli.files[0]}}
-        state: absent
-
-- name: Check ocp client cli exists
-  ansible.builtin.stat:
-    path: /usr/bin/oc
-  register: client_cli
-
-- name: Extract ocp client cli
-  ansible.builtin.unarchive:
-    remote_src: true
-    src: "{{ ocpClientDir }}"
-    dest: /usr/bin/
-  when: client_cli.stat.exists == False
-
-- name: Bash completion for oc command
-  ansible.builtin.shell: "oc completion bash > /etc/bash_completion.d/oc_bash_completion"
 
 - name: Check install dir exists
   ansible.builtin.stat:
@@ -110,21 +47,25 @@
 - name: Generate manifests
   ansible.builtin.command: openshift-install create manifests --dir=/root/ocp4
 
-#/root/install_source/butane-amd64 99-worker-chrony.bu -o 99-worker-chrony.yaml
-#- name: Add chrony machineConfig
-#  ansible.builtin.copy:
-#    remote_src: yes
-#    src: "^[\\s]*mastersSchedulable"
-#    dest: /root/ocp4/openshift/99-master-chrony.yaml
-#    line: "  mastersSchedulable: false"
-#
-#- name: Add chrony machineConfig
-#  ansible.builtin.copy:
-#    remote_src: yes
-#    src: "^[\\s]*mastersSchedulable"
-#    dest: /root/ocp4/openshift/99-worker-chrony.yaml
-#    line: "  mastersSchedulable: false"
-#  when: mode != 'compact'
+- name: Add master chrony machineConfig
+  when: ntp_client_configure
+  block:
+    - name: Create master Butane config
+      ansible.builtin.template:
+        src: 99-master-chrony.bu.j2
+        dest: /root/ocp4-backup/99-master-chrony.yaml
+    - name: Generate master MachineConfig object file
+      ansible.builtin.command: butane /root/ocp4-backup/99-master-chrony.yaml -o /root/ocp4/openshift/99-master-chrony.yaml
+
+- name: Add worker chrony machineConfig
+  when: ntp_client_configure and mode != 'compact'
+  block:
+    - name: Create worker Butane config
+      ansible.builtin.template:
+        src: 99-worker-chrony.bu.j2
+        dest: /root/ocp4-backup/99-worker-chrony.yaml
+    - name: Generate worker MachineConfig object file
+      ansible.builtin.command: butane /root/ocp4-backup/99-worker-chrony.yaml -o /root/ocp4/openshift/99-worker-chrony.yaml
   
 - name: Modify scheduler config
   ansible.builtin.lineinfile:
