--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,7 +32,7 @@ ntp_server_configure: true
 # NTP client
 ntp_client_configure: true
 ntp_server_ip: 172.20.11.50
-butaneDir: /root/install_source/
+butaneDir: /root/install_source/butane-amd64
 
 # OCP
 ocp_configure: true
